--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,9 @@ jobs:
       uses: SpicyPizza/create-envfile@v1.3
       with:
         envkey_DEBUG: true
-        envkey_RDS_WRITER_URL: ${{ secrets.RDS_WRITER_URL }}
-        envkey_RDS_READER_URL: ${{ secrets.RDS_READER_URL }}
         envkey_DB_URL: ${{ secrets.DB_URL }}
         file_name: .env
-        fail_on_empty: false
+        fail_on_empty: true
 
     - name: Check out code
       uses: actions/checkout@v2
