--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1.3
-      with:
-        envkey_DEBUG: true
-        envkey_DB_URL: ${{ secrets.DB_URL }}
-        file_name: .env
-        fail_on_empty: true
+    - name: Create env file
+      run: |
+          touch .env
+          echo DB_URL=${{ secrets.DB_URL }} >> .env
+          cat .env
 
     - name: Check out code
       uses: actions/checkout@v2
