--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -1,2 +1,5 @@
-DB_URL=postgres://root:secret@localhost:5432/stickverse
-AUTO_MIGRATE=true
+#!/usr/bin/env zsh
+DB_URL=postgres://postgres:@database-1.cluster-c789tyy87n1c.eu-central-1.rds.amazonaws.com:CHfEwSrtH83bwQmjBOC8d7EJF5432/stickverse
+RDS_PASSWORD=CHfEwSrtH83bwQmjBOC8d7EJF
+RDS_USER=postgres
+RDS_ENABLE=false
