--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 #!/usr/bin/env zsh
-DB_URL=postgres://postgres:@database-1.cluster-c789tyy87n1c.eu-central-1.rds.amazonaws.com:CHfEwSrtH83bwQmjBOC8d7EJF5432/stickverse
+DB_URL="host=database-1.cluster-c789tyy87n1c.eu-central-1.rds.amazonaws.com user=postgres password=CHfEwSrtH83bwQmjBOC8d7EJF5432 dbname=stickverse port=5432 sslmode=disable TimeZone=Asia/Shanghai
